# JCOSEK

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE-FAQ.md  MAINTAINERS.md  NOTICE.md  README.md  ROADMAP.md  SECURITY-RELEASE-TEMPLATE.md  SECURITY.md  TAG.md  UserPrompt.md
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  SECURITY.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
docs/: CMakeLists.txt  Doxyfile
example/: CMakeLists.txt  isr.c  isr.h  main.c  uart.c
example/s32k144/: main.c
github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
include/: Os.h  Std_Types.h
portable/: CMakeLists.txt
portable/bsp/: CMakeLists.txt
portable/bsp/s32k144/: CMakeLists.txt  S32K144.h  linker.ld  startup.c
portable/bsp/vexpress_a9_qemu/: CMakeLists.txt  linker.ld  startup.S
portable/cpu/: CMakeLists.txt
portable/cpu/cortex_a9/gcc/: CMakeLists.txt  Compiler.h  Platform_Types.h  port.c  portasm.S  portmacro.h
portable/cpu/cortex_m4/gcc/: CMakeLists.txt  port.c  portasm.S  portmacro.h
src/: CMakeLists.txt  Os_Alarm.c  Os_Counter.c  Os_Event.c  Os_Internal.h  Os_Interrupt.c  Os_Lifecycle.c  Os_Resource.c  Os_Scheduler.c  Os_Task.c
tests/: CMakeLists.txt
tests/system/: CMakeLists.txt
tests/system/test_01_scheduling/: CMakeLists.txt  main_test_v0.0.1.c
tests/system/test_02_resource/: CMakeLists.txt  main.c
tests/system/test_03_event/: CMakeLists.txt  main.c
tests/system/test_04_alarm/: CMakeLists.txt  main.c
tests/system/test_05_ISR/: CMakeLists.txt  isr.c  isr.h  main.c  uart.c  uart.h
tests/unit/: CMakeLists.txt  TestMaclOs.c  TestMockOs.c  TestMockOs.h  unity_config.h
tests/unit/test_runners/: TestMaclOs_Runner.c
